--- a/src/components/locales/en/translation.json
+++ b/src/components/locales/en/translation.json
@@ -30,15 +30,38 @@
         "dangxuat":"Logout",
         "themchitieu":"Add Spending"
      },
-     "home":{
-        "sodudau":"Income",
-        "soducuoi":"Spending",
-        "dachi":"Spent",
-        "tienchuyendi":"Money transfer",
-        "sua":"Fix",
-        "chiase":"Share",
-        "xoa":"Delete"
-     },
+      "home":{
+         "trangchu":"Home",
+         "chitieuthang":"Monthly spending",
+         "thunhap":"Income",
+         "chitieu":"Spending",
+         "tong":"Total",
+         "chitieungay":"Daily expenses",
+         "diachi":"Location",
+         "banbe":"Friend",
+         "loai":"Type",
+         "thoigian":"Time",
+         "khongcodulieu":"No data"
+      },
+      "editSpending":{
+         "suachitieu":"Edit spending",
+         "nhapsotien":"Enter the amount",
+         "loai":"Type",
+         "ngay":"Date",
+         "thoigian":"Time",
+         "ghichu":"Note",
+         "diachi":"Location",
+         "banbe":"Friend",
+         "themban":"Add friend",
+         "themanh":"Add image",
+         "xoaanh":"Delete image",
+         "luu":"Save",
+         "thoat":"Exit",
+         "vuilongnhapsotien":"Please enter the amount",
+         "suachitieuthanhcong":"Successful spending adjust",
+         "lichsu":"History",
+         "themchitieuthanhcong":"Successful add spending"
+      },
      "analysis":{
         "tu": "To",
         "den":"From"
