--- a/src/components/locales/en/translation.json
+++ b/src/components/locales/en/translation.json
@@ -28,7 +28,10 @@
         "lichsu":"History",
         "tygia":"Currency",
         "dangxuat":"Logout",
-        "themchitieu":"Add Spending"
+        "themchitieu":"Add Spending",
+        "bancochacchanmuondangxuat":"Are you sure you want to sign out?",
+        "huy":"Cancel"
+        
      },
       "home":{
          "trangchu":"Home",
@@ -60,7 +63,21 @@
          "vuilongnhapsotien":"Please enter the amount",
          "suachitieuthanhcong":"Successful spending adjust",
          "lichsu":"History",
-         "themchitieuthanhcong":"Successful add spending"
+         "themchitieuthanhcong":"Successful add spending",
+         "xoachitieu":"Delete spending",
+         "huy":"Cancel",
+         "xoa":"Delete",
+         "bancochacmuonxoa":"Are you sure you want to delete?",
+         "doitygia":"Curency",
+         "nhapsotienhientai":"Enter current amount",
+         "luachon":"Options",
+         "tu":"From",
+         "qua":"To",
+         "chuyendoi":"convert",
+         "giatri":"Value"
+
+
+
       },
      "analysis":{
         "tu": "To",
