--- a/src/components/locales/vi/translation.json
+++ b/src/components/locales/vi/translation.json
@@ -9,7 +9,7 @@
         "gioitinhnam":"Nam",
         "gioitinhnu":"Nữ",
         "tienhangthang":"Tiền hàng tháng",
-        "luu":"Lưu",
+        "luu":"Cập nhật",
         "xuatcsv":"Xuất CSV",
         "ngonngu":"Ngôn ngữ",
         "ngonnguanh":"Tiếng Anh",
@@ -73,7 +73,26 @@
       "tu":"Từ",
       "qua":"Qua",
       "chuyendoi":"Chuyển đổi",
-      "giatri":"Giá trị"
+      "giatri":"Giá trị",
+      "themchitieu":"Thêm chi tiêu",
+      "banchuanhaptenbanbe":"Bạn chưa thêm bạn bè",
+      "anuong":"Ăn uống",
+      "dichuyen":"Di chuyển",
+         "tiennha":"Tiền nhà",
+         "tiennuoc":"Tiền nước",
+         "tiendienthoai":"Tiền điện thoại",
+         "tiendien":"Tiền điện",
+         "suavatrangtrinha":"Sửa và trang trí nhà",
+         "baoduongxe":"Bảo dưỡng xe",
+         "khamsuckhoe":"Khám sức khỏe",
+         "baohiem":"Bảo hiểm",
+         "giaoduc":"Giáo dục",
+         "thucung":"Thú cưng",
+         "dichvuvagiadinh":"Dịch vụ và gia đình",
+         "chiphikhac":"Chi phí khác",
+         "dautu":"Đầu tư",
+         "thunhapkhac":"Thu nhập khác",
+         "nhommoi":"Nhóm mới"
    },
      "analysis":{
         "tu": "Từ",
