--- a/src/components/locales/en/translation.json
+++ b/src/components/locales/en/translation.json
@@ -4,12 +4,12 @@
          "anh":"Change Image",
          "ten":"Name",
          "thieuten":"Missing name",
-         "ngaysinh":"Bith day",
+         "ngaysinh":"Birthday",
          "gioitinh":"Gender",
          "gioitinhnam":"Man",
          "gioitinhnu":"Woman",
          "tienhangthang":"Monthly money",
-         "luu":"Update",
+         "luu":"Save",
          "xuatcsv":"Export CSV",
          "ngonngu":"Language",
          "ngonnguanh":"English",
